kubernetes/jellyfin/prod-d1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - env:
        - name: NODE_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: spec.nodeName
        - name: POD_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.name
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        image: docker.io/jellyfin/jellyfin
        imagePullPolicy: IfNotPresent
        name: jellyfin
        ports:
        - containerPort: 8096
          protocol: TCP
        volumeMounts:
        - mountPath: /data/
          name: jellyfin-media
          readOnly: false
        - mountPath: /config
          name: jellyfin-media
          subPath: downloads/jellyfin-cache
          readOnly: false
        - mountPath: /data/youtube
          name: jellyfin-media
          subPath: youtube
          readOnly: true
      restartPolicy: Always
      volumes:
      - name: jellyfin-media
        nfs:
          server: 10.15.21.132
          path: /mnt/user/video/
      - name: jellyfin-config
        persistentVolumeClaim:
          claimName: jellyfin-pvc
          readOnly: false
